example/secondfile/objects/SPProduct__c.object
<CustomObject>
    <fields>
        <fullName>No_of_Days_Inactive__c</fullName>
        <formula>Customer_Not_Ready_End_Date__c - Customer_Not_Ready_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Days Inactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Concurrent_Calls__c</fullName>
        <label>Number Of Concurrent Calls</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_VTNs_at_Site__c</fullName>
        <label>Number Of VTNs at Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Existing_Studies_Migrated__c</fullName>
        <label>Number of Existing Studies Migrated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_IP_Addresses__c</fullName>
        <label>Number of IP Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Licenses__c</fullName>
        <label>Number of Licenses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Objects__c</fullName>
        <label>Number of Objects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats__c</fullName>
        <label>Number of Seats?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofAccess__c</fullName>
        <label>Number of Access/Port</label>
        <summaryFilterItems>
            <field>Product_Pricing__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Access,Port</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Pricing__c.SP_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTC_Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OTC Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Class_of_Service__c</fullName>
        <label>Old Class of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Committed_Information_Rate_Price__c</fullName>
        <label>Old Committed Information Rate Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Committed_Information_Rate__c</fullName>
        <label>Old Committed Information Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Interface_Type__c</fullName>
        <label>Old Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_MAC_Addresses__c</fullName>
        <label>Old MAC Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_NC_Code__c</fullName>
        <label>Old NC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_SPEC_Code__c</fullName>
        <label>Old SPEC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Off_Cart__c</fullName>
        <label>On/Off Cart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off Cart</fullName>
                </value>
                <value>
                    <fullName>On Cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_Time_Revenue_Discount_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One Time Revenue Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Install_Charges__c</fullName>
        <label>Onsite Install Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityCreatedDate__c</fullName>
        <formula>Deal__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account__c</fullName>
        <formula>Deal__r.Account.SFDC_SP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_End_Customer__c</fullName>
        <formula>CASESAFEID (Deal__r.End_Customer__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity End Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Deal__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Record_Type__c</fullName>
        <formula>Deal__r.RecordType.DeveloperName</formula>
        <label>Oppty Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_ID_from_Premier_Online_Care__c</fullName>
        <label>Order ID from Premier Online Care</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Processing_Interval__c</fullName>
        <formula>ABS(Deal__r.Handoff_to_USRP__c -  Deal__r.RDS_Completion_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Processing Interval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin_of_Order__c</fullName>
        <label>Origin of Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T Partner Exchange</fullName>
                </value>
                <value>
                    <fullName>Premier Online Care</fullName>
                </value>
                <value>
                    <fullName>Mobility Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originally_Scheduled_EAD__c</fullName>
        <label>Originally Scheduled EAD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Originally_Scheduled_FOC__c</fullName>
        <label>Originally Scheduled FOC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outside_Work__c</fullName>
        <label>Outside Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CNR BLDG Not Ready</fullName>
                </value>
                <value>
                    <fullName>Fiber C&amp;E</fullName>
                </value>
                <value>
                    <fullName>Infrastructure ECD</fullName>
                </value>
                <value>
                    <fullName>LOOP EMUX</fullName>
                </value>
                <value>
                    <fullName>ROE</fullName>
                </value>
                <value>
                    <fullName>SOC</fullName>
                </value>
                <value>
                    <fullName>SPECIAL CONS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PNC_Bandwidth__c</fullName>
        <description>Anira - PNC Bandwidth</description>
        <label>PNC Bandwidth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNT_Uplift_Charge__c</fullName>
        <label>PNT Uplift Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POD_Email__c</fullName>
        <label>POD Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>POD__c</fullName>
        <label>POD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POD 1</fullName>
                </value>
                <value>
                    <fullName>POD 2</fullName>
                </value>
                <value>
                    <fullName>POD 3</fullName>
                </value>
                <value>
                    <fullName>POD 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Options__c</fullName>
        <label>Package Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Views_per_month__c</fullName>
        <label>Page Views (per month)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>SPProduct__c</referenceTo>
        <relationshipLabel>SP Products</relationshipLabel>
        <relationshipName>Parent_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_as_you_Go_Model__c</fullName>
        <label>Pay as you Go Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-&lt;to do&gt;-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_of_images_stored_in_the_cloud__c</fullName>
        <label>Percent of images stored in the cloud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Percentage Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Price__c</fullName>
        <label>Policy Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-&lt;to do&gt;-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Management_Selection__c</fullName>
        <label>Port Management Selection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Price__c</fullName>
        <label>Port List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Speed_Name__c</fullName>
        <label>Port Speed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Speed_Physical_Value__c</fullName>
        <label>Port Speed Physical Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Speed_Price__c</fullName>
        <label>Port Speed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Speed_Unit__c</fullName>
        <label>Port Speed Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_VLAN_Based__c</fullName>
        <label>Port/VLAN Based</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ported_Phone_Numbers__c</fullName>
        <label>Ported Phone Numbers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Porting_TNs__c</fullName>
        <label>Porting TNs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Test_Complete__c</fullName>
        <label>Pre-Test Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PremiseNumberVersion__c</fullName>
        <description>This is a Technical Field for creating a key for Contracting Renewal</description>
        <formula>Site_ID__c+TEXT(Deal__r.RDS_Version__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PremiseNumberVersion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Number__c</fullName>
        <label>Premise Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Schedule_Executed_Date__c</fullName>
        <label>Pricing Schedule Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Storage_Tier_III__c</fullName>
        <label>Primary Storage Tier III</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Storage_Tier_II__c</fullName>
        <label>Primary Storage Tier II</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Storage_Tier_IV__c</fullName>
        <label>Primary Storage Tier IV</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Storage_Tier_I__c</fullName>
        <label>Primary Storage Tier I</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_Price__c</fullName>
        <label>Processor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Processor_Product_Name__c</fullName>
        <label>Processor Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_SKUID__c</fullName>
        <label>Processor SKUID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_End_Date__c</fullName>
        <label>Product Exclusivity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Name1__c</fullName>
        <description>Product Name should be Type of Service it should not be Ordered Product</description>
        <formula>IF((Product_Name__c == &quot;AT&amp;T Managed Internet Service&quot; || Product_Name__c == &quot;AT&amp;T Virtual Private Network&quot;),
    IF(Access_Speed_Type__c == &quot;Switched Ethernet&quot;, 
        &quot;Ethernet&quot; + &quot; &quot; +  Port_Speed_Name__c   + &quot; &quot; + &quot;Transport (Port) Speed Product&quot;,
            IF(Access_Speed_Type__c == &quot;Private Line&quot;,
                Port_Speed_Name__c   + &quot; &quot; + &quot;Transport (Port) Speed Product&quot; ,&quot;&quot;
            )
    ),
    &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Service_Type__c</fullName>
        <formula>IF(Access_Speed_Type__c == &apos;Private Line&apos;, &apos;PL&apos;, IF(Access_Speed_Type__c == &apos;Switched Ethernet&apos;,&apos;SE&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>&quot;FEWP&quot;+Site_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Bill_Date__c</fullName>
        <label>Projected Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <label>Promotion Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Edge_Router_IP_Address_PER__c</fullName>
        <label>Provider Edge Router IP Address (PER)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Telephone_Number__c</fullName>
        <label>Quantity of Telephone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration_Date__c</fullName>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration_Details__c</fullName>
        <label>Quote Expiration Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Completion_Date__c</fullName>
        <label>RDS Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RDS_Deal_Hash__c</fullName>
        <formula>CASESAFEID(Deal__r.RDS_Deal_Hash__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS Deal Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Sent_to_SP_Date__c</fullName>
        <label>RDS Sent to SP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RDS_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>RDS Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ROM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SP_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Effective_Date__c</fullName>
        <label>Rate Card Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_ID__c</fullName>
        <label>Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Stability_Date__c</fullName>
        <label>Rate Stability Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product not supported by EBM</fullName>
                </value>
                <value>
                    <fullName>Product on roadmap but not launched in EBM</fullName>
                </value>
                <value>
                    <fullName>Product in controlled introduction for ABS</fullName>
                </value>
                <value>
                    <fullName>Location not supported by EBM offer (i.e.MoW)</fullName>
                </value>
                <value>
                    <fullName>Speed not offered as part of EBM product offer</fullName>
                </value>
                <value>
                    <fullName>Feature not including in EBM offer (i.e. MTU discrepancy)</fullName>
                </value>
                <value>
                    <fullName>Design not supported in EBM (i.e. interconnection, diversity options)</fullName>
                </value>
                <value>
                    <fullName>Transfer of account ownership not supported in EBM (i.e wholesale to retail)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecentlyUpdated__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used by CastIron to determine if an SPProduct has been recently updated, thus, should not be removed after all updates have been applied.</description>
        <label>RecentlyUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Issue_Date__c</fullName>
        <label>Record Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should default to unchecked 

Before the Order submitted status has been cascaded down to the products, If the Product status is &quot;Deal Reg with discount&quot; this field should become checked otherwise it should remain unchecked.</description>
        <label>Registration Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reject_More_Info_Comment__c</fullName>
        <label>Reject/More Info Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No competitive quote provided</fullName>
                </value>
                <value>
                    <fullName>Below revenue thresholds</fullName>
                </value>
                <value>
                    <fullName>Exceeds out of region thresholds</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Partial Approval - Deal Size</fullName>
                </value>
                <value>
                    <fullName>Partial Approval - Out of Region</fullName>
                </value>
                <value>
                    <fullName>Denied - Promotion Applicable</fullName>
                </value>
                <value>
                    <fullName>Other - contact AT&amp;T Partner Exchange representative</fullName>
                </value>
                <value>
                    <fullName>Denied - Product Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Denied - Deal Size</fullName>
                </value>
                <value>
                    <fullName>Denied - Competitive Quote Not Provided</fullName>
                </value>
                <value>
                    <fullName>Denied - Out of Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Action__c</fullName>
        <label>Request Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>More Info</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rescheduled_Exchange_Access_Date__c</fullName>
        <label>Rescheduled Exchange Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rescheduled_Firm_Order_Commitment__c</fullName>
        <label>Rescheduled Firm Order Commitment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retrigger_WS_to_BID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retrigger WS to BID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right_of_Entrance_LOA__c</fullName>
        <label>Right of Entrance/LOA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rollup_Discounted_Price__c</fullName>
        <label>Rollup Discounted Price</label>
        <summarizedField>Product_Pricing__c.discounted_price__c</summarizedField>
        <summaryForeignKey>Product_Pricing__c.SP_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_List_Price__c</fullName>
        <label>Rollup List Price</label>
        <summarizedField>Product_Pricing__c.list_price__c</summarizedField>
        <summaryForeignKey>Product_Pricing__c.SP_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rome_Opportunity_ID__c</fullName>
        <formula>Rome_Opportunity__r.Rome_Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROME Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rome_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ROME Opportunity</label>
        <referenceTo>Rome_Opportunity__c</referenceTo>
        <relationshipLabel>SP Products</relationshipLabel>
        <relationshipName>SP_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rome_Product_ID__c</fullName>
        <externalId>true</externalId>
        <label>ROME Product ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAART_ID__c</fullName>
        <label>SAART ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Number__c</fullName>
        <label>SA Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETUP_FEE_List_Price__c</fullName>
        <label>SETUP FEE List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SETUP_FEE_Name__c</fullName>
        <label>SETUP FEE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_Requirements__c</fullName>
        <label>Site Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOC_Service__c</fullName>
        <label>SOC (Service)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOR_to_Provisioning_Date__c</fullName>
        <label>Initial Order Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPEC_Code__c</fullName>
        <label>SPEC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Discount_Percentage__c</fullName>
        <label>Special Pricing Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SP_Discount_Type__c</fullName>
        <description>Used in Special Pricing.</description>
        <label>SP Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>SOC</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Port</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Product_Alias__c</fullName>
        <label>SP Product Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP__c</fullName>
        <formula>Deal__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Access_Delivery_Date__c</fullName>
        <label>Scheduled Access Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Exchange_Access_Date__c</fullName>
        <label>Scheduled Exchange Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secure_Network_Location_Avail_Speed__c</fullName>
        <description>Location to provision the Secure Network and Available Speed (Mbps)</description>
        <inlineHelpText>Location to provision the Secure Network and Available Speed (Mbps)</inlineHelpText>
        <label>Secure Network Location &amp; Avail Speed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select_IP_Flex_Term_Length__c</fullName>
        <label>Select IP Flex Term Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Solution__c</fullName>
        <label>Selected Solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_ROME__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to ROME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceContractNumber__c</fullName>
        <formula>&apos;EBM&apos;+RecordType.DeveloperName+Deal__r.ContractNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Availability_Response__c</fullName>
        <label>Service Availability Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>